force-app/main/default/objects/Participant__c/fields/Absent_Reason__c.field-meta.xml
<CustomField>
    <fullName>Absent_Reason__c</fullName>
    <label>Absent Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>