force-app/main/default/objects/Participant__c/fields/Birthday_Programme__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Programme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birthday Programme</label>
    <type>Checkbox</type>
</CustomField>