force-app/main/default/objects/Participant__c/fields/Cancellation_Reasons_for_Event__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reasons_for_Event__c</fullName>
    <formula>Programme_Event__r.Cancellation_Reasons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Reasons for Event</label>
    <type>Text</type>
</CustomField>