force-app/main/default/objects/Participant__c/fields/Date_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Stamp__c</fullName>
    <label>Date/Time Stamp</label>
    <type>DateTime</type>
</CustomField>