force-app/main/default/objects/Participant__c/fields/Donation_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Donation_QR_Code__c</fullName>
    <formula>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=&quot;+ Referral_Link__c ,&quot;QR code&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donation QR Code</label>
    <type>Text</type>
</CustomField>