force-app/main/default/objects/Participant__c/fields/Invitation_Link__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Link__c</fullName>
    <formula>$Label.Landing_URL + &quot;volunteer-program?id=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invitation Link</label>
    <type>Text</type>
</CustomField>