force-app/main/default/objects/Participant__c/fields/Invitation_URL__c.field-meta.xml
<CustomField>
    <fullName>Invitation_URL__c</fullName>
    <label>Invitation URL</label>
    <type>Url</type>
</CustomField>