force-app/main/default/objects/Participant__c/fields/Participant_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Participant_Firstname__c</fullName>
    <label>Participant Firstname (upload)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>