force-app/main/default/objects/Participant__c/fields/Participant_Lastname__c.field-meta.xml
<CustomField>
    <fullName>Participant_Lastname__c</fullName>
    <label>Participant Lastname (upload)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>