force-app/main/default/objects/Participant__c/fields/Pgm_Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pgm_Event_End_Date__c</fullName>
    <formula>Programme_Event__r.End_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pgm/ Event End_Date</label>
    <type>DateTime</type>
</CustomField>