force-app/main/default/objects/Participant__c/fields/Program_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Event_Name__c</fullName>
    <formula>Programme_Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program/ Event Name</label>
    <type>Text</type>
</CustomField>