force-app/main/default/objects/Participant__c/fields/Program_Stage__c.field-meta.xml
<CustomField>
    <fullName>Program_Stage__c</fullName>
    <formula>TEXT(Programme_Event__r.Programme_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Stage</label>
    <type>Text</type>
</CustomField>