force-app/main/default/objects/Participant__c/fields/Programme_Event__c.field-meta.xml
<CustomField>
    <fullName>Programme_Event__c</fullName>
    <label>Programme/ Event</label>
    <referenceTo>Programme_Events__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>