force-app/main/default/objects/Participant__c/fields/Programme_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Programme_Start_Date__c</fullName>
    <formula>DATEVALUE( Programme_Event__r.Start_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programme Start Date</label>
    <type>Date</type>
</CustomField>