force-app/main/default/objects/Participant__c/fields/Referral_Link__c.field-meta.xml
<CustomField>
    <fullName>Referral_Link__c</fullName>
    <formula>$Label.Landing_URL  +&quot;donate?programme=&quot;+ Programme_Event__c +&quot;&amp;participant=&quot;+ Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Link</label>
    <type>Text</type>
</CustomField>