force-app/main/default/objects/Participant__c/fields/Send_To__c.field-meta.xml
<CustomField>
    <fullName>Send_To__c</fullName>
    <label>Send To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Email</fullName>
            </value>
            <value>
                <fullName>Secondary Email</fullName>
            </value>
            <value>
                <fullName>Asst Email</fullName>
            </value>
            <value>
                <fullName>Primary &amp; Asst Email</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>