force-app/main/default/objects/Participant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selected</fullName>
                <default>true</default>
                <label>Selected</label>
            </value>
            <value>
                <fullName>Invitation Sent</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Withdraw</fullName>
                <label>Withdrawn</label>
            </value>
            <value>
                <fullName>Registered</fullName>
                <isActive>false</isActive>
                <label>Registered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>