force-app/main/default/objects/Participant__c/fields/UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentifier__c</fullName>
    <formula>Contact_Name__c +&apos;|&apos;+ Programme_Event__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueIdentifier</label>
    <type>Text</type>
</CustomField>