force-app/main/default/objects/Participant__c/fields/Withdraw_date__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_date__c</fullName>
    <label>Withdraw date</label>
    <type>Date</type>
</CustomField>