force-app/main/default/objects/Participant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Program_Event_Name__c</columns>
    <columns>NAME</columns>
    <columns>Participant_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>